<resources>
    <string name="app_name">timecalculator</string>
    <string name="title">시간 계산기</string>
    <string name="hint">00</string>
    <string name="hour">시간</string>
    <string name="min">분</string>
    <string name="sec">초</string>
    <string name="plus">더하기</string>
    <string name="minus">빼 기</string>
    <string name="calLog">계산 결과</string>
    <string name="calName">None</string>
</resources>